fix article list on mobile

--- a/_includes/article/_article.scss
+++ b/_includes/article/_article.scss
@@ -93,11 +93,21 @@
     &-image {
       width: 35px;
       margin-right: 30px;
+
+      @include media($tablet) {
+        width: 30px;
+        margin-right: 20px;
+      }
     }
 
     &-container {
       padding: 25px 30px;
       margin: 0 -30px;
+
+      @include media($tablet) {
+        margin: 0;
+        padding: 25px 10px;
+      }
     }
 
     &-date {
